force-app/main/default/objects/Product2/fields/AD_KG__c.field-meta.xml
<CustomField>
    <fullName>AD_KG__c</fullName>
    <description>KG&apos;s in the sack which go to AD, assuming sack is full</description>
    <inlineHelpText>KG&apos;s in the sack which go to AD, assuming sack is full</inlineHelpText>
    <label>AD KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>