force-app/main/default/objects/Product2/fields/BinCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>BinCategoryCode__c</fullName>
    <label>Bin Category Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>