force-app/main/default/objects/Product2/fields/CanBeCollectedOnADeliveryRound__c.field-meta.xml
<CustomField>
    <fullName>CanBeCollectedOnADeliveryRound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CanBeCollectedOnADeliveryRound</label>
    <type>Checkbox</type>
</CustomField>