force-app/main/default/objects/Product2/fields/CanBeDelivered__c.field-meta.xml
<CustomField>
    <fullName>CanBeDelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CanBeDelivered</label>
    <type>Checkbox</type>
</CustomField>