force-app/main/default/objects/Product2/fields/CanBeRecurring__c.field-meta.xml
<CustomField>
    <fullName>CanBeRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CanBeRecurring</label>
    <type>Checkbox</type>
</CustomField>