force-app/main/default/objects/Product2/fields/Case_Safe_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Id__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Case safe ID</label>
    <type>Text</type>
</CustomField>