force-app/main/default/objects/Product2/fields/ChargeVariableWeight__c.field-meta.xml
<CustomField>
    <fullName>ChargeVariableWeight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Variable Weight</label>
    <type>Checkbox</type>
</CustomField>