force-app/main/default/objects/Product2/fields/Clearance_Product__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used as a flag in the eCommerce platform.</description>
    <inlineHelpText>This is used as a flag in the eCommerce platform.</inlineHelpText>
    <label>Clearance Product</label>
    <type>Checkbox</type>
</CustomField>