force-app/main/default/objects/Product2/fields/CO2_Saved__c.field-meta.xml
<CustomField>
    <fullName>CO2_Saved__c</fullName>
    <description>Tonnes of CO2 saved by recycling the contents of a full sack</description>
    <inlineHelpText>Tonnes of CO2 saved by recycling the contents of a full sack</inlineHelpText>
    <label>Tonnes CO2 Saved</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>