force-app/main/default/objects/Product2/fields/Coffee_KG__c.field-meta.xml
<CustomField>
    <fullName>Coffee_KG__c</fullName>
    <label>Coffee KG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>