force-app/main/default/objects/Product2/fields/Collection_Product__c.field-meta.xml
<CustomField>
    <fullName>Collection_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the associated Collection Product, it&apos;s used in the eCommerce platform</description>
    <inlineHelpText>This is the associated Collection Product, it&apos;s used in the eCommerce platform</inlineHelpText>
    <label>Collection Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>