force-app/main/default/objects/Product2/fields/Collection_Type__c.field-meta.xml
<CustomField>
    <fullName>Collection_Type__c</fullName>
    <label>Collection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled (Delivery Product)</fullName>
            </value>
            <value>
                <fullName>Scheduled (Collection Product)</fullName>
            </value>
            <value>
                <fullName>Ad-Hoc (Delivery Product)</fullName>
            </value>
            <value>
                <fullName>Ad-Hoc (Collection Product)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>