force-app/main/default/objects/Product2/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container Type</label>
    <referenceTo>Container_Type__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>