force-app/main/default/objects/Product2/fields/DefinesACollectionPoint__c.field-meta.xml
<CustomField>
    <fullName>DefinesACollectionPoint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DefinesACollectionPoint</label>
    <type>Checkbox</type>
</CustomField>