force-app/main/default/objects/Product2/fields/Delivery_Category__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Category__c</fullName>
    <label>Delivery Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Internal Bin</fullName>
            </value>
            <value>
                <fullName>External Bin</fullName>
            </value>
            <value>
                <fullName>Schedule Collection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>