force-app/main/default/objects/Product2/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collect Delivery</fullName>
            </value>
            <value>
                <fullName>Recycled Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>