force-app/main/default/objects/Product2/fields/eCommerce_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>eCommerce_Product_Type__c</fullName>
    <label>eCommerce Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clearance</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>