force-app/main/default/objects/Product2/fields/Enqix_Id__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Id__c</fullName>
    <description>Id from Enqix system.</description>
    <externalId>true</externalId>
    <inlineHelpText>Id from Enqix system.</inlineHelpText>
    <label>Enqix Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>