force-app/main/default/objects/Product2/fields/Estimated_Weight__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Weight__c</fullName>
    <label>Estimated Weight</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>