force-app/main/default/objects/Product2/fields/EWCWasteCategory__c.field-meta.xml
<CustomField>
    <fullName>EWCWasteCategory__c</fullName>
    <description>EWC Waste Category as defined in the Enqix System.</description>
    <inlineHelpText>EWC Waste Category as defined in the Enqix System.</inlineHelpText>
    <label>EWC Waste Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>