force-app/main/default/objects/Product2/fields/HazardCode__c.field-meta.xml
<CustomField>
    <fullName>HazardCode__c</fullName>
    <label>HazardCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>