force-app/main/default/objects/Product2/fields/Is_bid_product__c.field-meta.xml
<CustomField>
    <fullName>Is_bid_product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is BID product?</label>
    <type>Checkbox</type>
</CustomField>