force-app/main/default/objects/Product2/fields/KG__c.field-meta.xml
<CustomField>
    <fullName>KG__c</fullName>
    <inlineHelpText>Max KG Capacity of the sack/product</inlineHelpText>
    <label>KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>