force-app/main/default/objects/Product2/fields/KWH_Produced__c.field-meta.xml
<CustomField>
    <fullName>KWH_Produced__c</fullName>
    <inlineHelpText>Kilowatt Hours of Energy Produced by AD or Incineration</inlineHelpText>
    <label>KWH Produced</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>