force-app/main/default/objects/Product2/fields/KWH_Produced_Per_KG__c.field-meta.xml
<CustomField>
    <fullName>KWH_Produced_Per_KG__c</fullName>
    <formula>KWH_Produced__c / KG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KWH Produced Per KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>