force-app/main/default/objects/Product2/fields/Nl_accode__c.field-meta.xml
<CustomField>
    <fullName>Nl_accode__c</fullName>
    <description>the field Nl_accode__c on the product object should be *required* on creation of a Product.
Nl_accode__c stands for &apos;nominal ledger code&apos;. Users need to populate it with a code from Finance whenever they create a new product.</description>
    <inlineHelpText>The field Nl_accode__c on the product object should be *required* on creation of a Product.
Nl_accode__c stands for &apos;nominal ledger code&apos;. 
Users need to populate it with a code from Finance whenever they create a new product.</inlineHelpText>
    <label>Nl_accode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>