force-app/main/default/objects/Product2/fields/Non_Standard__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard__c</fullName>
    <label>Non-Standard</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>