force-app/main/default/objects/Product2/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAYG</fullName>
            </value>
            <value>
                <fullName>Wheelie Bin</fullName>
            </value>
            <value>
                <fullName>Collect</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>BID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>