force-app/main/default/objects/Product2/fields/Partner_Product_Flag__c.field-meta.xml
<CustomField>
    <fullName>Partner_Product_Flag__c</fullName>
    <formula>CONTAINS(Name, &quot;(P)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Product Flag</label>
    <type>Checkbox</type>
</CustomField>