force-app/main/default/objects/Product2/fields/Partner_Product_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Partner_Product_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the associated Partner Product, it&apos;s used in the eCommerce platform.</description>
    <inlineHelpText>This is the associated Partner Product, it&apos;s used in the eCommerce platform.</inlineHelpText>
    <label>Partner Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Partner Product)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>