force-app/main/default/objects/Product2/fields/PhysicalForm__c.field-meta.xml
<CustomField>
    <fullName>PhysicalForm__c</fullName>
    <label>PhysicalForm</label>
    <length>20</length>
    <type>Text</type>
</CustomField>