force-app/main/default/objects/Product2/fields/Portal_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Portal_Product_Category__c</fullName>
    <description>Product category to guide user through portal start page.</description>
    <label>Portal Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Recycled Products</fullName>
            </value>
            <value>
                <fullName>Bin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>