force-app/main/default/objects/Product2/fields/Product_Skins__c.field-meta.xml
<CustomField>
    <fullName>Product_Skins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Skin</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>Product_Skin__c.Name</field>
            <operation>equals</operation>
            <value>Collection Skin</value>
        </filterItems>
        <filterItems>
            <field>$Source.Product_Type__c</field>
            <operation>equals</operation>
            <value>Collection</value>
        </filterItems>
        <filterItems>
            <field>$Source.Product_Type__c</field>
            <operation>equals</operation>
            <value>Delivery</value>
        </filterItems>
        <filterItems>
            <field>Product_Skin__c.Name</field>
            <operation>notEqual</operation>
            <value>Collection Skin</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Skin__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>