force-app/main/default/objects/Product2/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <description>Product Category as defined in the Enqix System.</description>
    <inlineHelpText>Product Category as defined in the Enqix System.</inlineHelpText>
    <label>Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>