force-app/main/default/objects/Product2/fields/Quantity_Sold_In__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Sold_In__c</fullName>
    <description>Amount of Units within a Product</description>
    <label>Quantity Sold In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>