force-app/main/default/objects/Product2/fields/Recycle_KG__c.field-meta.xml
<CustomField>
    <fullName>Recycle_KG__c</fullName>
    <inlineHelpText>KG&apos;s of the sack&apos;s contents which are recycled, with assumption sack is at full capacity.</inlineHelpText>
    <label>Recycle KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>