force-app/main/default/objects/Product2/fields/RentalProduct__c.field-meta.xml
<CustomField>
    <fullName>RentalProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RentalProduct</label>
    <type>Checkbox</type>
</CustomField>