force-app/main/default/objects/Product2/fields/Report_Groupings__c.field-meta.xml
<CustomField>
    <fullName>Report_Groupings__c</fullName>
    <label>Report Groupings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WEEE and Toner</fullName>
            </value>
            <value>
                <fullName>Cardboard</fullName>
            </value>
            <value>
                <fullName>Junk Removal</fullName>
            </value>
            <value>
                <fullName>Food Recycling</fullName>
            </value>
            <value>
                <fullName>Paper Shredding</fullName>
            </value>
            <value>
                <fullName>General Waste</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>Mixed Recycling</fullName>
            </value>
            <value>
                <fullName>Stationery and Textiles</fullName>
            </value>
            <value>
                <fullName>Coffee Grounds</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
                <isActive>false</isActive>
                <label>Paper</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>