force-app/main/default/objects/Product2/fields/Salesforce_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Product_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce Product ID</label>
    <type>Text</type>
</CustomField>