force-app/main/default/objects/Product2/fields/ScheduleAbbrev__c.field-meta.xml
<CustomField>
    <fullName>ScheduleAbbrev__c</fullName>
    <label>ScheduleAbbrev</label>
    <length>10</length>
    <type>Text</type>
</CustomField>