force-app/main/default/objects/Product2/fields/SerialNumberReqd__c.field-meta.xml
<CustomField>
    <fullName>SerialNumberReqd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SerialNumberReqd</label>
    <type>Checkbox</type>
</CustomField>