force-app/main/default/objects/Product2/fields/StdWgtKG__c.field-meta.xml
<CustomField>
    <fullName>StdWgtKG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>StdWgtKG</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>