force-app/main/default/objects/Product2/fields/TimeStamp_Update__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp_Update__c</fullName>
    <label>TimeStamp_Update</label>
    <type>Date</type>
</CustomField>