force-app/main/default/objects/Product2/fields/Tonnes_CO2_Saved_Per_KG__c.field-meta.xml
<CustomField>
    <fullName>Tonnes_CO2_Saved_Per_KG__c</fullName>
    <formula>CO2_Saved__c / KG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tonnes CO2 Saved Per KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>