force-app/main/default/objects/Product2/fields/Trees_Saved__c.field-meta.xml
<CustomField>
    <fullName>Trees_Saved__c</fullName>
    <inlineHelpText>Trees saved by recycling contents of a full sack</inlineHelpText>
    <label>Trees Saved</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>