force-app/main/default/objects/Product2/fields/Trees_Saved_Per_KG__c.field-meta.xml
<CustomField>
    <fullName>Trees_Saved_Per_KG__c</fullName>
    <formula>Trees_Saved__c / KG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trees Saved Per KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>