force-app/main/default/objects/Product2/fields/Waste_Category__c.field-meta.xml
<CustomField>
    <fullName>Waste_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Waste Category</label>
    <referenceTo>Waste_Category__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>