force-app/main/default/objects/Product2/fields/WTE_KG__c.field-meta.xml
<CustomField>
    <fullName>WTE_KG__c</fullName>
    <label>WTE KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>