force-app/main/default/objects/Product2/fields/WTN_Product__c.field-meta.xml
<CustomField>
    <fullName>WTN_Product__c</fullName>
    <label>WTN Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WTNProduct</valueSetName>
    </valueSet>
</CustomField>