force-app/main/default/objects/Product2/fields/WTN_Reqd__c.field-meta.xml
<CustomField>
    <fullName>WTN_Reqd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WTN_Reqd</label>
    <type>Checkbox</type>
</CustomField>