force-app/main/default/objects/Product2/fields/Zones__c.field-meta.xml
<CustomField>
    <fullName>Zones__c</fullName>
    <inlineHelpText>These Zones are linked to the availability of products within the eCommerce platform</inlineHelpText>
    <label>Zones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Zones</valueSetName>
    </valueSet>
</CustomField>