force-app/main/default/objects/Product2/validationRules/Credit_Note_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Note_Product</fullName>
    <active>true</active>
    <description>The name for the credit note product can&apos;t be changed otherwise the &quot;Credit Note&quot; button won&apos;t work.</description>
    <errorConditionFormula>ISCHANGED(Name)
&amp;&amp;
PRIORVALUE(Name) = &quot;Non-standard Other Charge/Credit&quot;</errorConditionFormula>
    <errorMessage>The name for the credit note product can&apos;t be changed</errorMessage>
</ValidationRule>