force-app/main/default/objects/Product2/validationRules/Product_Code_Too_Long.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Code_Too_Long</fullName>
    <active>true</active>
    <description>The product code cannot be more than 10 characters long. It causes issues with Order/Invoicing triggers.</description>
    <errorConditionFormula>LEN(ProductCode ) &gt; 10</errorConditionFormula>
    <errorMessage>The product code cannot be more than 10 characters long.</errorMessage>
</ValidationRule>