force-app/main/default/objects/Product2/validationRules/ProductCategoryValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductCategoryValidation</fullName>
    <active>false</active>
    <description>Cannot be null</description>
    <errorConditionFormula>ISBLANK(Product_Category__c)</errorConditionFormula>
    <errorDisplayField>Product_Category__c</errorDisplayField>
    <errorMessage>Product Category is Not Valid</errorMessage>
</ValidationRule>