force-app/main/default/objects/Product2/validationRules/ProductCodeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductCodeValidation</fullName>
    <active>true</active>
    <description>validate product code - table allows null, because of that it&apos;s necessary this validation</description>
    <errorConditionFormula>ISBLANK(ProductCode)</errorConditionFormula>
    <errorDisplayField>ProductCode</errorDisplayField>
    <errorMessage>Product Code Cannot Be Blank</errorMessage>
</ValidationRule>