force-app/main/default/objects/Product2/validationRules/ProductNameValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductNameValidation</fullName>
    <active>true</active>
    <description>Table allows null</description>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Product Name Cannot Be Blank</errorMessage>
</ValidationRule>