force-app/main/default/objects/Product2/validationRules/ProductSkinValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductSkinValidation</fullName>
    <active>false</active>
    <description>Cannot be null</description>
    <errorConditionFormula>ISBLANK(Product_Skins__c)</errorConditionFormula>
    <errorMessage>Product Skin not valid</errorMessage>
</ValidationRule>