force-app/main/default/objects/Product2/validationRules/ProductValidation_CoreCollection.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductValidation_CoreCollection</fullName>
    <active>false</active>
    <description>Don&apos;t do anything with this 4 core collection products</description>
    <errorConditionFormula>REGEX(Enqix_Id__c,&quot;264|265|266|267&quot;)</errorConditionFormula>
    <errorMessage>Changes Disallowed to the 4 core collection products</errorMessage>
</ValidationRule>