force-app/main/default/objects/Product2/validationRules/RequireNominalCode.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireNominalCode</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsActive, ISBLANK(Nl_accode__c))</errorConditionFormula>
    <errorDisplayField>Nl_accode__c</errorDisplayField>
    <errorMessage>Active products cannot have an empty Nominal code.</errorMessage>
</ValidationRule>