force-app/main/default/objects/Product2/validationRules/RequireWasteCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireWasteCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(WTN_Product__c, &apos;Season Ticket&apos;), ISPICKVAL(WTN_Product__c, &apos;Ad-Hoc&apos;)), ISBLANK(Waste_Category__c))</errorConditionFormula>
    <errorDisplayField>Waste_Category__c</errorDisplayField>
    <errorMessage>Waste Category is required for selected WTN Product.</errorMessage>
</ValidationRule>