force-app/main/default/objects/Product2/listViews/Collection_products.listView-meta.xml
<ListView>
    <fullName>Collection_products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Product_Skins__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Collection</value>
    </filters>
    <label>Collection products</label>
</ListView>